# gcode-harness

./: .gitignore  .replit  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  OAUTH.md  PLAN_MCP_SKILLS.md  README.md  RELEASING.md  TELEMETRY.md  build.rs  codemagic.yaml
.github/scripts/: verify_windows_install.ps1
.github/workflows/: ci.yml  release.yml  windows-smoke.yml
assets/demos/: duck_fast-on-mid-stream_autoedit_timeline.json  duck_fast-on-mid-stream_autoedit_v2_timeline.json  duck_fast-on-mid-stream_autoedit_v2_trimmed_timeline.json  edited_timeline.json  wolf_timeline.json
crates/gcode-agent-runtime/: Cargo.toml
crates/gcode-ambient-types/: Cargo.toml
crates/gcode-auth-types/: Cargo.toml
crates/gcode-azure-auth/: Cargo.toml
crates/gcode-background-types/: Cargo.toml
crates/gcode-batch-types/: Cargo.toml
crates/gcode-build-support/: Cargo.toml
crates/gcode-build-support/src/: lib.rs  paths.rs  storage_helpers.rs  tests.rs
crates/gcode-compaction-core/: Cargo.toml
crates/gcode-config-types/: Cargo.toml
crates/gcode-core/: Cargo.toml
crates/gcode-desktop/: Cargo.toml  build.rs
crates/gcode-embedding/: Cargo.toml
crates/gcode-gateway-types/: Cargo.toml
crates/gcode-import-core/: Cargo.toml
crates/gcode-memory-types/: Cargo.toml
crates/gcode-message-types/: Cargo.toml
crates/gcode-mobile-core/: Cargo.toml
crates/gcode-mobile-sim/: Cargo.toml
crates/gcode-notify-email/: Cargo.toml
crates/gcode-overnight-core/: Cargo.toml
crates/gcode-pdf/: Cargo.toml
crates/gcode-plan/: Cargo.toml
crates/gcode-protocol/: Cargo.toml
crates/gcode-protocol/src/: lib.rs
crates/gcode-protocol/src/protocol_tests/: core_events.rs  misc_events.rs  randomized.rs
crates/gcode-provider-core/: Cargo.toml
crates/gcode-provider-gemini/: Cargo.toml
crates/gcode-provider-metadata/: Cargo.toml
crates/gcode-provider-openai/: Cargo.toml
crates/gcode-provider-openrouter/: Cargo.toml
crates/gcode-selfdev-types/: Cargo.toml
crates/gcode-session-types/: Cargo.toml
crates/gcode-side-panel-types/: Cargo.toml
crates/gcode-storage/: Cargo.toml
crates/gcode-swarm-core/: Cargo.toml
crates/gcode-task-types/: Cargo.toml
crates/gcode-terminal-launch/: Cargo.toml
crates/gcode-tool-core/: Cargo.toml
crates/gcode-tool-core/src/: lib.rs
crates/gcode-tool-types/: Cargo.toml
crates/gcode-tui-account-picker/: Cargo.toml
crates/gcode-tui-core/: Cargo.toml
crates/gcode-tui-markdown/: Cargo.toml
crates/gcode-tui-markdown/src/: lib.rs  markdown_render_full.rs  markdown_render_lazy.rs  markdown_render_support.rs  markdown_wrap.rs
crates/gcode-tui-markdown/src/markdown_tests/cases/: streaming_cache.rs
crates/gcode-tui-mermaid/: Cargo.toml
crates/gcode-tui-messages/: Cargo.toml
crates/gcode-tui-messages/src/: cache.rs  message.rs  prepared.rs
crates/gcode-tui-render/: Cargo.toml
crates/gcode-tui-session-picker/: Cargo.toml
crates/gcode-tui-session-picker/src/: lib.rs
crates/gcode-tui-style/: Cargo.toml
crates/gcode-tui-tool-display/: Cargo.toml
crates/gcode-tui-usage-overlay/: Cargo.toml
crates/gcode-tui-workspace/: Cargo.toml
crates/gcode-update-core/: Cargo.toml
crates/gcode-usage-types/: Cargo.toml
docs/: AMBIENT_MODE.md  BROWSER_PROVIDER_PROTOCOL.md  CLIENT_CORE_PRESENTATION_SPLIT_PLAN.md  CODE_QUALITY_10_10_PLAN.md  CODE_QUALITY_TODO.md  COMPILE_PERFORMANCE_PLAN.md  CRATE_OWNERSHIP_BOUNDARIES.md  DESKTOP_APP_ARCHITECTURE.md  DESKTOP_CODEBASE_ARCHITECTURE.md  DESKTOP_FIRST_PROTOTYPE.md  DESKTOP_SINGLE_SESSION_DESIGN.md  DESKTOP_SUPERAPP_WORKSPACE.md  IOS_CLIENT.md  MEMORY_ARCHITECTURE.md  MEMORY_BUDGET.md  MOBILE_AGENT_SIMULATOR.md  MOBILE_IOS_HOST_INTEGRATION.md  MOBILE_SIMULATOR_WORKFLOW.md  MOBILE_SWIFT_AUDIT.md  MODULAR_ARCHITECTURE_RFC.md  MULTI_SESSION_CLIENT_ARCHITECTURE.md  ONBOARDING_SANDBOX.md  PROVIDER_SESSION_SHARED_CONTRACT_AUDIT.md  REFACTORING.md  SAFETY_SYSTEM.md  SECURITY_DEPENDENCIES.md  SERVER_ARCHITECTURE.md  TERMINAL_BENCH.md  UNIFIED_SELFDEV_SERVER_PLAN.md  WINDOWS.md  WRAPPERS.md  reddit_dashboard.py
docs/dev/: crate-splitting-plan.md
figma/: README.md  gcode-mobile-design-spec.md
figma/gcode-mobile-plugin/: README.md  code.js  manifest.json
ios/: Package.swift  SIMULATOR_FOUNDATION.md  project.yml
mockups/gcode-mobile/: README.md  add-server.html  chat.html  connect.html  index.html  interrupt.html  onboarding.html  qr-scanner.html  sessions.html  settings.html
packaging/linux/: gcode-desktop.desktop
scripts/: agent_trace.sh  analyze_runtime_memory_log.py  auth_regression_matrix.sh  auto_screenshot.sh  bench_compile.sh  bench_memory_cli.py  bench_selfdev_checkpoints.sh  bench_startup.py  bench_startup_visible_ready.py  benchmark_swarm.py  benchmark_takehome.py  benchmark_tools.sh  build_linux_compat.sh  capture_demo.sh  capture_screenshot.sh  cargo_exec.sh  check_dependency_boundaries.py  check_startup_budget.sh  code_size_budget.json  compare_token_usage.py  debug_socket_test.sh  dev_cargo.sh  gcode_harbor_agent.py  gcode_memory_snapshot.py  gcode_monitor.py  install.ps1  install.sh  install_release.sh  mobile_simulator_smoke.sh  mobile_simulator_tester.sh  onboarding_sandbox.sh  panic_budget.json  profile_remote_resume_burst.py  profile_single_spawn.py  quick-release.sh  real_provider_smoke.sh  record_demo.sh  refactor_shadow.sh  remote_build.sh  replay_recording.sh  (+20 more)
src/: agent.rs  agent_tests.rs  ambient.rs  ambient_tests.rs  browser.rs  browser_tests.rs  build.rs  bus.rs  catchup.rs  compaction.rs  config.rs  config_tests.rs  copilot_usage.rs  dictation.rs  dictation_tests.rs  embedding.rs  env.rs  gateway.rs  goal.rs  goal_tests.rs  id.rs  import.rs  import_tests.rs  logging.rs  login_qr.rs  main.rs  memory.rs  memory_log.rs  memory_tests.rs  memory_types.rs  message.rs  notifications.rs  overnight.rs  plan.rs  platform.rs  platform_tests.rs  process_memory.rs  process_title.rs  prompt.rs  prompt_tests.rs  (+33 more)
src/agent/: compaction.rs  environment.rs  interrupts.rs  provider.rs  (+4 more)
telemetry-worker/: health.sql  package.json  schema.sql  wrangler.toml
tests/: provider_matrix.rs
(+367 files in other folders)
