[package]
name = "gcode-build-support"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
gcode-core = { path = "../gcode-core" }
gcode-selfdev-types = { path = "../gcode-selfdev-types" }
gcode-storage = { path = "../gcode-storage" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"

[dev-dependencies]
tempfile = "3"
