[package]
name = "gcode-tui-markdown"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
gcode-tui-mermaid = { path = "../gcode-tui-mermaid" }
gcode-tui-workspace = { path = "../gcode-tui-workspace" }
pulldown-cmark = "0.12"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }
unicode-width = "0.2"
