[package]
name = "gcode-tui-messages"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
gcode-config-types = { path = "../gcode-config-types" }
gcode-message-types = { path = "../gcode-message-types" }
gcode-tui-markdown = { path = "../gcode-tui-markdown" }
ratatui = "0.30"
serde_json = "1"
