[package]
name = "gcode-tui-session-picker"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
gcode-message-types = { path = "../gcode-message-types" }
gcode-session-types = { path = "../gcode-session-types" }
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]
